@@ -1,4 +1,4 @@
 DIST maven-artifact-manager-2.0.tar.bz2 36928 RMD160 2fde09b9048eb52abb3e5b439fe8987cd18469d4 SHA1 9945f5c00d66c9d71ae29fd7e588bb3a0fedf217 SHA256 87450e0b224619ee39d6bd8df39af9c1a3b1e01112b9229a1b6317dec9d4758b
-EBUILD maven-artifact-manager-2.0.ebuild 882 RMD160 847da9c406c93678a1ef030aa0d322ea213a42bb SHA1 1d85d9f79c23d300bd11c2c6a4a5be4e784cd3bb SHA256 7e7c21ff357933f89498a3bd7d654772886fe1e0268fe4ba4b0244777d7b9b12
-MISC ChangeLog 273 RMD160 1833ae876a6c219d71fb4e3474e7f1ad8c858fa7 SHA1 5ccf5b12095e6ffff2f3ee4ce76f2353a1edbae0 SHA256 c00d0d261a60485598b6f513b670d6a1d9b41e705fc03edfa348c31f9f2eef14
+EBUILD maven-artifact-manager-2.0.ebuild 953 RMD160 041f670caf6c3653d94bd42f2b2be84d9902b143 SHA1 6096cfa893c680cd366e42ba164d6cfc5d83b6a7 SHA256 e128492f5c04f0ce9e25b29b67fcc6a715ed7a370f931f51a1e572c3ef36b4c5
+MISC ChangeLog 404 RMD160 7827b46cd641126817a53df2432441a7edf829b0 SHA1 25bb38e51aefbb732a9d44f71ccc02fd956b11d7 SHA256 ccfc371627a8517009095f75f3770d3e26173a79139df6f74cdcb9cc2bcd1567
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
