@@ -2,6 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
+JAVA_PKG_IUSE="source"
 inherit java-maven-2
 
 DESCRIPTION="Maven is a software project management and comprehension tool."
@@ -9,8 +10,8 @@ SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
 HOMEPAGE="http://maven.apache.org/"
 LICENSE="Apache-2.0"
 SLOT="0"
-KEYWORDS="~x86"
-IUSE="source doc"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
 DEP="dev-java/maven-artifact
 dev-java/maven-repository-metadata
 =dev-java/plexus-container-default-1.0_alpha9
@@ -20,7 +21,7 @@ dev-java/wagon-file
 dev-java/wagon-provider-api"
 #for tests only dev-java/easymock
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
-DEPEND=">=virtual/jre-1.4 ${DEP}"
+RDEPEND=">=virtual/jre-1.4 ${DEP}"
 EANT_GENTOO_CLASSPATH="maven-artifact
 maven-repository-metadata
 plexus-container-default-1.0_alpha9
@@ -30,4 +31,6 @@ wagon-file
 wagon-provider-api"
 #for tests only easymock
 
+RESTRICT=test
+JAVA_PKG_SRC_DIRS="src/main/java/*"
 
